--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
+  "name": "your-project-name",
+  "version": "1.0.0",
+  "description": "Your project description",
+  "main": "Node.js",
+  "type": "module",
+  "scripts": {
+    "start": "node Node.js"
+  },
   "dependencies": {
+    "express": "^4.18.2",
     "node-fetch": "^2.7.0"
   }
 }
