--- a/netlify/functions/FetchVatsimdata/package.json
+++ b/netlify/functions/FetchVatsimdata/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "netlify functions:create - scheduled function in JavaScript",
   "main": "FetchVatsimdata.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
