--- a/netlify/functions/FetchVatsimdata/package.json
+++ b/netlify/functions/FetchVatsimdata/package.json
@@ -16,6 +16,7 @@
   "author": "Netlify",
   "license": "MIT",
   "dependencies": {
-    "@netlify/functions": "^2.8.2"
+    "@netlify/functions": "^2.8.2",
+    "axios": "^1.7.7"
   }
 }
