--- a/netlify/functions/FetchVatsimdata/package.json
+++ b/netlify/functions/FetchVatsimdata/package.json
@@ -1,7 +1,8 @@
 {
   "name": "fetch-vatsim-data",
+  "type": "module",
   "dependencies": {
     "@netlify/functions": "^2.8.2",
-    "axios": "^1.7.7"
+    "axios": "^1.6.2"
   }
 }
