Add membership section and styling to Facts.css; update index.html to include Facts.css

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "liveServer.settings.wait": 0
+    "liveServer.settings.wait": 0,
+    "cSpell.words": [
+        "padresbrown",
+        "padresgold"
+    ]
 }
